--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
+    "initialize": "prisma db push",
     "seed": "prisma db seed",
     "migrate": "prisma migrate dev",
     "lint": "next lint",
