--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.10.0",
+    "prisma": "^4.10.1",
+    "supabase": "^1.38.4",
     "tailwindcss": "^3.2.0",
     "ts-node": "10.9.1",
     "typescript": "^4.9.4"
