--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.11.3",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.0",
     "@tanstack/react-query": "^4.20.0",
